--- a/Dynopedia/dinosauriostyle.css
+++ b/Dynopedia/dinosauriostyle.css
@@ -99,14 +99,9 @@ main img {
 }
 
 #saurisquios {
+    border: 1px solid black;
     background-color: rgb(255, 255, 255);
 }
-
-
-
-
-
-
 
 aside {
     width: 200px;
@@ -185,3 +180,5 @@ h2 {
 a:visited {
     color: white;
 }
+
+
