--- a/Dynopedia/formulariostyle.css
+++ b/Dynopedia/formulariostyle.css
@@ -24,7 +24,7 @@ form label{
 }
 
 /*Edicion del boton de enviar datos*/
-form input[type="button"]{
+.enviar{
 	width:100%;
     height:40px;
 	border-radius:5px;
