--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ table{
     margin-left: 3vw;
     margin-top: 0vh;
    
-    background: linear-gradient(180deg, rgba(174,238,255,1) 0%, rgba(81,236,232,1) 25%, rgba(35,188,207,1) 53%, rgba(15,171,172,1) 77%, rgba(15,149,176,1) 100%);
+    background: linear-gradient(0deg, rgba(28,111,119,1) 0%, rgba(193,235,221,1) 83%, rgba(213,250,233,1) 100%);
 
 }
 
