--- a/FormularioStyle.css
+++ b/FormularioStyle.css
@@ -45,3 +45,29 @@ form input[type="text"]{
 }
 
 /*Edicion del boton de retroceso*/
+.fas{
+	color:white;
+	font-size: 30px;
+}
+
+  /* Estilo para el botón */
+  .enviar {
+    background-color: #0e4371;
+    color: white;
+    border: none;
+    padding:2%;
+    width: 20%;;
+	margin-top: 2vh;
+  }
+  
+  .enviar:hover {
+    background-color: #1a77c2;
+    transform: scale(1.05);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
+  }
+  
+  .enviar:active {
+    background-color: #196fad;
+    transform: scale(0.95);
+    box-shadow: none;
+  }
