--- a/Dynopedia/dinosauriostyle.css
+++ b/Dynopedia/dinosauriostyle.css
@@ -55,6 +55,7 @@ main {
 }
 
 h1{
+    margin-top: 1vh;
     font-size: 5vh;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
 }
