--- a/Dynopedia/style.css
+++ b/Dynopedia/style.css
@@ -144,7 +144,7 @@ a:visited {
         padding: 10px;
     }
 
-    #tres {
+    #tres{
         display: none;
     }
 }
@@ -175,7 +175,7 @@ a:visited {
         padding: 10px;
     }
 
-    #tres {
+    #tres{
         display: none;
     }
 }
@@ -207,8 +207,12 @@ a:visited {
         padding: 10px;
     }
 
-    #tres {
-        display: none;
+    #tres{
+        margin-left: -100px;
+    }
+    #tres img{
+        width: 500px;
+        height: 1000px;
     }
 }
 
@@ -233,8 +237,12 @@ a:visited {
         height: auto;
     }
 
-    #tres {
-        height: 100vh;
+    #tres{
+        margin-left: -100px;
+    }
+    #tres img{
+        width: 500px;
+        height: 1000px;
     }
 }
 
