--- a/Dynopedia/style.css
+++ b/Dynopedia/style.css
@@ -25,24 +25,7 @@ h1 {
     background: linear-gradient(20deg, rgb(3, 141, 187), rgb(139, 132, 229), rgb(155, 7, 188), rgb(176, 146, 26));
 }
 
-.listaNav li {
-    border-radius: 20px;
-    color: aliceblue;
-    padding: 20px;
-    text-align: right;
-    list-style: none;
-    display: inline;
-    font-size: 20px;
-    text-align: center;
-}
 
-.listaNav li:hover {
-    color: blue;
-}
-
-a {
-    text-decoration: none;
-}
 
 /* Fin edicion del header     */
 aside {
@@ -112,6 +95,90 @@ h2 {
     text-align: center;
 }
 
+/* Edicion de los enlaces */
+.listaNav li {
+    border-radius: 20px;
+    color: aliceblue;
+    padding: 20px;
+    text-align: right;
+    list-style: none;
+    display: inline;
+    font-size: 20px;
+    text-align: center;
+}
+
+.listaNav li {
+    border-radius: 20px;
+    color: aliceblue;
+    padding: 20px;
+    text-align: right;
+    list-style: none;
+    display: inline;
+    font-size: 20px;
+    text-align: center;
+}
+
+.listaNav .nav-link {
+    color: #ffffff;
+    text-decoration: none;
+    position: relative;
+    transition: color 0.3s ease;
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
+}
+
+.listaNav .nav-link::before {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+}
+
+.listaNav .nav-link:hover {
+    color: #ff9900;
+}
+
+.listaNav .nav-link:hover::before {
+    transform: scaleX(1);
+}
+
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+    position: relative;
+    transition: color 0.3s ease;
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
+}
+
+a::before {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+}
+
+a:hover {
+    color: #ff9900;
+}
+
+a:hover::before {
+    transform: scaleX(1);
+}
+
+
+
 a:visited {
     color: white;
 }
@@ -144,7 +211,7 @@ a:visited {
         padding: 10px;
     }
 
-    #tres{
+    #tres {
         display: none;
     }
 }
@@ -175,7 +242,7 @@ a:visited {
         padding: 10px;
     }
 
-    #tres{
+    #tres {
         display: none;
     }
 }
@@ -207,10 +274,11 @@ a:visited {
         padding: 10px;
     }
 
-    #tres{
+    #tres {
         margin-left: -100px;
     }
-    #tres img{
+
+    #tres img {
         width: 500px;
         height: 1000px;
     }
@@ -237,13 +305,12 @@ a:visited {
         height: auto;
     }
 
-    #tres{
+    #tres {
         margin-left: -100px;
     }
-    #tres img{
+
+    #tres img {
         width: 500px;
         height: 1000px;
     }
 }
-
-
