--- a/Dynopedia/style.css
+++ b/Dynopedia/style.css
@@ -6,7 +6,8 @@ h1 {
     background-repeat: no-repeat;
     background: linear-gradient(20deg, rgb(255, 140, 0), rgb(255, 214, 48), rgb(255, 222, 114), rgb(255, 243, 194));
     border-radius: 5px;
-    padding: 0.1px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-size: 40px;
 }
 
@@ -181,6 +182,10 @@ a:hover::before {
 
 a:visited {
     color: white;
+}
+
+p{
+    font-size: large;
 }
 
 @media only screen and (max-width:480px) {
